<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:title="@string/action_titulo1" android:checkableBehavior="single" >

    <!--    <item
            android:id="@+id/nav_inicio"
            android:icon="@mipmap/icon_inicio50"
            android:title="@string/action_inicio" />
-->

        <item
            android:id="@+id/nav_ver_cuenta"
            android:icon="@mipmap/icon_cuenta50"
            android:title="@string/action_ver_cuenta" />
        <item
            android:id="@+id/nav_mis_preferencias"
            android:icon="@mipmap/icon_mis_preferencias50"
            android:title="@string/action_mis_preferencias" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@mipmap/icon_historial50"
            android:title="@string/action_mi_historial" />

        <item
            android:id="@+id/nav_ranking"
            android:icon="@mipmap/icon_ranking50"
            android:title="@string/action_ranking" />


        <item
            android:id="@+id/nav_mapa"
            android:icon="@mipmap/icon_mapa50"
            android:title="@string/action_mapa" />

        <item
            android:id="@+id/nav_salir_cuenta"
            android:icon="@mipmap/icon_cerrar_sesion50"
            android:title="@string/action_salir_cuenta" />

        <item
            android:id="@+id/nav_acerca_de"
            android:icon="@mipmap/icon_acercade50"
            android:title="@string/action_acerca_de" />


    </group>

    <item android:title="@string/action_titulo2">
        <menu>
            <item
                android:id="@+id/nav_compartir"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_compartir" />

            <item
                android:id="@+id/nav_salir"
                android:icon="@mipmap/icon_salir50"
                android:title="@string/action_salir" />

        </menu>
    </item>

</menu>
