<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:title="@string/action_titulo1" android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_inicio"
            android:icon="@mipmap/icon_inicio50"
            android:title="@string/action_inicio" />

        <item
            android:id="@+id/nav_salir_cuenta"
            android:icon="@mipmap/icon_cerrar_sesion50"
            android:title="Tools" />

        <item
            android:id="@+id/nav_acerca_de"
            android:icon="@mipmap/icon_acercade50"
            android:title="Tools" />


    </group>

    <item android:title="@string/action_titulo2">
        <menu>
            <item
                android:id="@+id/nav_compartir"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

            <item
                android:id="@+id/nav_salir"
                android:icon="@mipmap/icon_salir50"
                android:title="Tools" />

        </menu>
    </item>

</menu>
